# Enlighten-AI

./: .env.example  .gitignore  CLAUDE.md  README.md  RED_TEAM_REPORT.md  config.py  pyproject.toml  run_pipeline.sh
DrK_Chat/: app.py  chunking.py  embeddings.py  guardrails.py  ingest.py  prompts.py  rag.py  rerank.py  retrieval.py  transforms.py
Scrapper/: build_dataset.py  playlists.py  transcripts.py  whisperx_backend.py
data_analysis/: eda.py  guardrails_eval.md  guardrails_eval.py  injection_eval.md  injection_eval.py  redteam_eval.md  redteam_eval.py  report.md  rerank_experiment.md  rerank_experiment.py  retrieval_experiment.md  retrieval_experiment.py
tests/: test_guardrails.py  test_transforms.py
